# workspace

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: plan.md
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: work-items.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src/core/: AppController.test.ts  AppController.ts  README.md
src/core/storage/: README.md  StorageProvider.ts
src/infra/: README.md
src/infra/storage/: LocalFsStorageProvider.ts  README.md  inMemoryStorageProvider.test.ts  inMemoryStorageProvider.ts
src/shell/: README.md
src/ui/: AppLayout.tsx  README.md
src/ui/localization/: LocalizationContext.tsx
