[package]
name = "tauri-react-app"
version = "0.1.0"
edition = "2021"
description = "Tauri + React + TypeScript desktop app"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = [] }
tauri-plugin-fs = "2.4"
